[package]
name = "fcheck"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "Cool tool for checking enabled and disabled features of a specified crate within a cargo project"
repository = "https://github.com/urparvezali/fcheck"
readme = "readme.md"
keywords = ["cli", "tool", "feature", "check", "cargo", "checking", "rust", "project"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
cargo_metadata = "0.23.1"

[[bin]]
name = "fcheck"
path = "src/main.rs"
